...
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:weightSum="1"
        android:layout_marginLeft="15dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Name"
            android:gravity="center_horizontal"
            android:layout_weight="0.84"
            android:theme="@style/BlackText"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:onClick="addFriend"
            android:text="Add"
            android:theme="@style/RedButton" />
...
